<resources>
    <string name="app_name">NadacoVision</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_save">mentés</string>

    <string name="customer_lastname">családi név</string>
    <string name="customer_firstname">keresztnév</string>
    <string name="customer_email">email cím</string>
    <string name="customer_phone">telefonszám</string>
    <string name="customer_zip">irányítószám</string>
    <string name="customer_city">város</string>
    <string name="customer_address">cím</string>
    <string name="customer_birthday">születési dátum (ééééhhnn)</string>
    <string name="customer_data">ügyfél adatok</string>
</resources>
