<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customer_lastname"
        android:layout_alignParentStart="true"
        android:hint="@string/customer_lastname"
        android:layout_toStartOf="@+id/view"
        android:layout_alignParentTop="true" />

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/customer_firstname"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/customer_firstname"
        android:layout_toEndOf="@+id/view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/customer_email"
        android:layout_below="@+id/customer_lastname"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/customer_firstname"
        android:hint="@string/customer_email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/customer_phone"
        android:layout_below="@+id/customer_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/customer_phone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/customer_zip"
        android:layout_below="@+id/customer_phone"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/customer_lastname"
        android:hint="@string/customer_zip"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customer_city"
        android:layout_below="@+id/customer_phone"
        android:layout_alignEnd="@+id/customer_firstname"
        android:layout_toEndOf="@+id/view"
        android:hint="@string/customer_city"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customer_address"
        android:layout_below="@+id/customer_zip"
        android:layout_alignEnd="@+id/customer_city"
        android:layout_alignParentStart="true"
        android:hint="@string/customer_address"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/customer_birthday"
        android:layout_below="@+id/customer_address"
        android:layout_alignEnd="@+id/customer_city"
        android:layout_alignParentStart="true"
        android:hint="@string/customer_birthday"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_save_customer_data"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/customer_city"
        android:onClick="save" />


</RelativeLayout>
